@@ -21,6 +21,7 @@ package org.neo4j.cypher.internal.parser.v1_8
 
 import org.neo4j.cypher.internal.commands._
 import org.neo4j.graphdb.Direction
+import org.neo4j.helpers.ThisShouldNotHappenError
 
 
 trait StartClause extends Base with Expressions with CreateUnique {
@@ -42,9 +43,23 @@ trait StartClause extends Base with Expressions with CreateUnique {
 
   case class NamedPathWStartItems(path:NamedPath, items:Seq[StartItem])
 
+  private def removeProperties(in:AbstractPattern):AbstractPattern = in match {
+    case ParsedNamedPath(name, patterns) => throw new ThisShouldNotHappenError("Andres", "We don't support paths in paths, and so should never see this")
+    case rel: ParsedRelation => rel.copy(
+      props = Map(),
+      start = rel.start.copy(props = Map()),
+      end = rel.end.copy(props = Map())
+    )
+    case n:ParsedEntity => n.copy(props = Map())
+  }
+
   private def translate(abstractPattern: AbstractPattern): Maybe[Any] = abstractPattern match {
     case ParsedNamedPath(name, patterns) =>
-      val namedPathPatterns: Maybe[Any] = patterns.map(matchTranslator).reduce(_ ++ _)
+      val namedPathPatterns: Maybe[Any] = patterns.
+        map(removeProperties).
+        map(matchTranslator).
+        reduce(_ ++ _)
+
       val startItems = patterns.map(p => translate(p.makeOutgoing)).reduce(_ ++ _)
 
       startItems match {
